Apply correct background for dark mode
It fixes the dark mode background color of
conditions, actions and yaml blocks

Changelog: fixed
EE: true

--- a/ee/app/assets/stylesheets/components/security_policies.scss
+++ b/ee/app/assets/stylesheets/components/security_policies.scss
@@ -2,3 +2,11 @@
   @include sticky-top-positioning();
   @include gl-z-index-1;
 }
+
+.security-policies-bg-gray-10 {
+  @include gl-bg-gray-10;
+
+  .gl-dark & {
+    @include gl-bg-white;
+  }
+}
